# cloosphere-sanitized

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  FLOW_V2_SCENARIO_TEST.md  FLOW_V2_TEST_REPORT.md  LICENSE  README.md  SANITIZATION.md  azure_deploy.bicep  azure_deploy.parameters.example.json  azure_deploy_template.bicep  azure_mcp.sh  docker-compose.dev.yaml  docs_web.sh  package-lock.json  package.json  pyproject.toml  sample-organizations.json  tailwind.config.js  test-embed.html  test_mcp_server.py  vite.config.ts
.azuredevops/: PULL_REQUEST_TEMPLATE.md  azure-build-pipelines-base.yml  azure-build-pipelines-dev.yml  azure-build-pipelines-main.yml  azure-build-pipelines-release.yml  pr_lint.yml  pytest.yml
.azuredevops/backend/: ruff.yml
.claude/commands/: changelog.md  cloosphere_init.md  demo_video.md  doc_create.md  e2e_test.md  frontend_test.md  frontend_video_test.md  git_commit.md  guide_screenshot.md  guide_update.md  release_docs.md  system_rename.md  translate.md  video_edit.md
.claude/rules/: backend-auth.md  backend-config.md  backend-middleware.md  backend-model.md  backend-permission.md  backend-router.md  ext-code-gateway.md  ext-llm-utils.md  ext-pipes-server.md  ext-react-agent.md  ext-search-engine.md  feature-agent-flows.md  feature-agents.md  feature-channels.md  feature-chat.md  feature-dbsphere.md  feature-glossary.md  feature-guardrails.md  feature-inquiries.md  feature-knowledge-graph.md  feature-knowledge.md  feature-license.md  feature-media.md  feature-monitoring.md  feature-ops-routers.md  feature-organizations.md  feature-projects.md  feature-rag.md  feature-schedules.md  feature-tools-functions.md  feature-trace-evaluation.md  feature-usage-limit.md  frontend-api-client.md  frontend-component.md  frontend-i18n.md  frontend-page.md  frontend-store.md  frontend-styling.md  frontend-utils.md  infra-deployment.md  (+11 more)
.claude/skills/backend/: SKILL.md  config.md  model.md  permission.md  router.md  workspace.md
.claude/skills/frontend/: SKILL.md
.claude/skills/hol/: SKILL.md
.claude/skills/langchain/: SKILL.md
.claude/skills/langgraph/: SKILL.md
backend/: requirements.txt  start.sh
backend/extension_modules/agent/: __init__.py  ask_user_form_tool.py  ask_user_tool.py  code_interpreter_tool.py  drive_select_files_tool.py  hitl_confirmation.py  hitl_policy.py  image_tool.py  memory_consolidator.py  memory_extractor.py  memory_retention_worker.py  memory_tools.py  message_compressor.py  prefetch.py  prompts.py  tool_connection_tools.py  ui_action_tools.py  unified_agent.py  unified_state.py
backend/extension_modules/agent_flow/: __init__.py  agent_flow_runner.py  flow_builder_agent.py
backend/extension_modules/auto_evaluation/: evaluator.py  trigger.py
backend/extension_modules/dbsphere/: __init__.py  dashboard_builder_agent.py  dbsphere_agent.py  dbsphere_state.py  prompts.py  sql_classifier.py
backend/extension_modules/dbsphere_back/: dbsphere_agent.py  dbsphere_base.py  prompt.py
backend/extension_modules/embed_sso/: __init__.py  registry.py  schemas.py
backend/extension_modules/glossary/: __init__.py  embedding.py  extract_worker.py  models.py  service.py  tools.py  value_enrich.py
backend/extension_modules/guardrail/: __init__.py  middleware.py  pii_detector.py
backend/extension_modules/guide_agent/: README.md  bm25_retriever.py  catalog.py  chunker.py  guide_agent.py  guide_catalog.yaml  mdx_cleaner.py  tools.py
backend/extension_modules/kbsphere/: kbsphere_agent.py
backend/extension_modules/knowledge_graph/: __init__.py  age_service.py  cypher_safety.py  edge_type_recommender.py  index_service.py  kb_chunk_worker.py  service.py  source_sync_worker.py  tools.py
backend/extension_modules/pipes/: base.py  sample_pipe.py
backend/extension_modules/react/: prompts.py  react_base.py  react_middleware_base.py  tool_models.py  tools_base.py
backend/extension_modules/search_engine/: __init__.py  base.py  connector.py  embedding.py  filter_builder.py  filter_translator.py  models.py  schemas.py
backend/extension_modules/server/: __init__.py  base.py  langchain_adapter.py  mcp_connector.py  openapi_connector.py
backend/open_webui/: __init__.py  config.py  constants.py  env.py  functions.py  main.py
backend/scripts/: build_guide_catalog.py
docker/jupyter/: Dockerfile  README.md
docs/: READ_ME.md  api-chat-completions.md  kg-test-questions.md  workspace-permission-control.md  workspace-share-tags.md
docs/design/: mcp-integration.md
docs/engineers/: google-integration-rollback-runbook.md  kb-search-settings-audit.md
docs/engineers/uv_n_ruff/examples/04-workspace-example/: pyproject.toml
docs/pr/: PR_ENTERPRISE_FEATURES.md  PR_ENTERPRISE_FEATURES_DETAIL.md
docs/users/: google-integration.md
guide/: build.py  index.html
guide/docs/: docs.json
guide/en/: README.md  _sidebar.md  channels.md  chat.md  getting-started.md  schedules.md
guide/ko/: README.md  _sidebar.md  channels.md  chat.md  getting-started.md  schedules.md
monitor/: .env.example  README.md  docker-compose.yml  otel-collector.yml  prometheus.yml
scripts/: demo-env.sh  generate_license_key.py
scripts/.license_keys/: public_key.pem
scripts/acr_promote/: promote-customer-image.sh
scripts/deploy_demo/: bhi.conf  database_config.json  deploy-demo.sh  example.conf  hanwha.conf  sl.conf
scripts/deploy_poc/: deploy-poc.sh  example.conf
scripts/deploy_prd/: deploy-prd.sh  example.conf
services/GoogleWorkspaceMCP/: .env.example  Dockerfile  Makefile  README.md  deploy-acr.sh  docker-compose.yaml
services/Microsoft365MCP/: .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy-acr.sh  docker-compose.yaml
services/Presenton/: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  mcp_server.py  prompts.py  register_template.py
src/: app.css  app.d.ts  app.html  tailwind.css
src/lib/: constants.ts
src/routes/: +layout.svelte
static/static/: site.webmanifest
teams_app/: README.md  manifest.json  pack.sh
tests/: locustfile.py
(+1259 files in other folders)
