[project]
name = "cloosphere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache==0.12.3",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiomysql==0.3.2",
    "aioodbc==0.5.0",
    "pymssql==2.3.13",
    "databricks-sql-connector==4.2.5",
    "aiosignal==1.4.0",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anthropic==0.75.0",
    "anyio==4.12.0",
    "apscheduler==3.10.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asgiref==3.8.1",
    "asn1crypto==1.5.1",
    "async-timeout==5.0.1",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "authlib==1.6.5",
    "av==14.0.1",
    "azure-ai-documentintelligence==1.0.2",
    "azure-common==1.1.28",
    "azure-communication-email==1.1.0",
    "azure-core==1.37.0",
    "azure-identity==1.25.0",
    "azure-keyvault-keys==4.11.0",
    "azure-search-documents==11.6.0",
    "azure-storage-blob==12.24.1",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bidict==0.23.1",
    "bitarray==3.8.0",
    "black==25.9.0",
    "blinker==1.9.0",
    "boto3==1.40.5",
    "botocore==1.40.76",
    "bottleneck==1.6.0",
    "brotli==1.2.0 ; platform_python_implementation == 'CPython'",
    "brotlicffi==1.2.0.0 ; platform_python_implementation != 'CPython'",
    "build==1.3.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "chroma-hnswlib==0.7.6",
    "chromadb==0.6.3",
    "click==8.3.1",
    "colbert-ai==0.2.21",
    "colorama==0.4.6 ; (os_name != 'nt' and sys_platform == 'win32') or (os_name == 'nt' and sys_platform != 'darwin' and sys_platform != 'linux')",
    "colorclass==2.2.2",
    "coloredlogs==15.0.1",
    "croniter==6.0.0",
    "cryptography==46.0.3",
    "ctranslate2==4.6.2",
    "dataclasses-json==0.6.7",
    "datasets==4.0.0",
    "db-dtypes==1.5.0",
    "ddgs==9.0.0",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "dill==0.3.8",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "docstring-parser==0.17.0",
    "docx2txt==0.8",
    "durationpy==0.10",
    "easygui==0.98.3",
    "ecdsa==0.19.1",
    "einops==0.8.1",
    "elastic-transport==9.2.0",
    "elasticsearch==9.1.0",
    "emoji==2.15.0",
    "et-xmlfile==2.0.0",
    "events==0.5",
    "fake-useragent==2.2.0",
    "fastapi==0.118.0",
    "faster-whisper==1.1.1",
    "filelock==3.20.1",
    "filetype==1.2.0",
    "firecrawl-py==4.5.0",
    "flask==3.1.2",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "fpdf2==2.8.2",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "ftfy==6.2.3",
    "git-python==1.0.3",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.2",
    "google-api-python-client==2.187.0",
    "google-auth==2.47.0",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.2.4",
    "google-cloud-aiplatform==1.140.0",
    "google-cloud-bigquery==3.40.0",
    "google-cloud-core==2.5.0",
    "google-cloud-discoveryengine==0.17.0",
    "google-cloud-documentai==3.10.0",
    "google-cloud-resource-manager==1.16.0",
    "google-cloud-speech==2.37.0",
    "google-cloud-storage==3.1.0",
    "google-cloud-texttospeech==2.34.0",
    "google-cloud-vectorsearch==0.5.0",
    "google-crc32c==1.8.0",
    "google-genai==1.65.0",
    "google-generativeai==0.8.5",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.1.1",
    "grpc-google-iam-v1==0.14.3",
    "grpcio==1.76.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0 ; platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.3.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jmespath==1.0.1",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kaleido==0.2.1",
    "kubernetes==33.1.0",
    "langchain==1.2.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.7",
    "langchain-experimental==0.4.1",
    "langchain-google-genai==4.2.0",
    "langchain-google-vertexai==3.2.2",
    "langchain-mcp-adapters==0.2.1",
    "langchain-openai==1.1.6",
    "langchain-tests==1.1.5",
    "langchain-text-splitters==1.1.0",
    "langdetect==1.0.9",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.5",
    "langgraph-checkpoint-sqlite==3.0.3",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.3.1",
    "langsmith==0.5.0",
    "ldap3==2.9.1",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "mako==1.3.10",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "mcp==1.21.2",
    "mcpo==0.0.19",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "msal==1.34.0",
    "msal-extensions==1.3.1",
    "msoffcrypto-tool==5.4.2",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "mypy-extensions==1.1.0",
    "narwhals==2.15.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "ninja==1.13.0",
    "nltk==3.9.1",
    "numexpr==2.14.1",
    "numpy==2.4.0",
    "oauthlib==3.3.1",
    "olefile==0.47",
    "oletools==0.60.2",
    "onnxruntime==1.20.1",
    "openai==2.14.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "openpyxl==3.1.5",
    "opensearch-py==2.8.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-exporter-otlp-proto-common==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-aiohttp-client==0.58b0",
    "opentelemetry-instrumentation-asgi==0.58b0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-sqlalchemy==0.58b0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "opentelemetry-util-http==0.58b0",
    "oracledb==3.2.0",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pathspec==1.0.1",
    "pcodedmp==1.2.6",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "peewee==3.18.1",
    "peewee-migrate==1.12.2",
    "pgvector==0.4.1",
    "pillow==11.3.0",
    "pinecone==6.0.2",
    "pinecone-plugin-interface==0.0.7",
    "platformdirs==4.5.1",
    "playwright==1.49.1",
    "plotly==6.5.2",
    "pluggy==1.6.0",
    "portalocker==2.10.1",
    "posthog==5.4.0",
    "primp==0.15.0",
    "propcache==0.4.1",
    "proto-plus==1.27.0",
    "protobuf==5.29.5",
    "psutil==7.1.3",
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.3.1",
    "psycopg2-binary==2.9.10",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pyclipper==1.4.0",
    "pycparser==2.23 ; implementation_name != 'PyPy'",
    "pycrdt==0.12.25",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pydub==0.25.1",
    "pyee==12.0.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymdown-extensions==10.14.2",
    "pymilvus==2.6.2",
    "pymongo==4.15.5",
    "pymupdf==1.26.3",
    "pymysql==1.1.1",
    "pyodbc==5.3.0",
    "pyopenssl==25.3.0",
    "pypandoc==1.15",
    "pyparsing==3.3.1",
    "pypdf==6.0.0",
    "pypdfium2==5.2.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4 ; sys_platform == 'win32'",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-benchmark==5.2.3",
    "pytest-codspeed==4.3.0",
    "pytest-docker==3.1.2",
    "pytest-recording==0.13.4",
    "pytest-socket==0.7.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-engineio==4.12.3",
    "python-iso639==2025.11.16",
    "python-jose==3.5.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "python-socketio==5.14.0",
    "pytokens==0.3.0",
    "pytube==15.0.0",
    "pytz==2025.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyxlsb==1.0.10",
    "pyyaml==6.0.3",
    "qdrant-client==1.14.3",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.14.3",
    "rapidocr-onnxruntime==1.4.4",
    "redis==7.1.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "restrictedpython==8.0",
    "rich==13.9.4",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "ruff==0.14.10",
    "s3transfer==0.13.1",
    "safetensors==0.7.0",
    "scipy==1.16.3",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowflake-connector-python==4.2.0",
    "socksio==1.0.0",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.38",
    "sqlparse==0.5.5",
    "sse-starlette==3.0.3",
    "starlette==0.48.0",
    "starlette-compress==1.6.0",
    "starsessions==2.2.1",
    "sympy==1.14.0",
    "syrupy==5.1.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tomlkit==0.14.0",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "typer==0.20.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "ujson==5.11.0",
    "unstructured==0.18.18",
    "unstructured-client==0.42.3",
    "uritemplate==4.2.0",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.37.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "validators==0.35.0",
    "vanna==2.0.1",
    "vcrpy==8.1.1",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "weaviate-client==4.17.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "werkzeug==3.1.4",
    "win-unicode-console==0.5 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
    "wrapt==1.17.3",
    "wsproto==1.3.2",
    "xlrd==2.0.1",
    "xlsxwriter==3.2.9",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "youtube-transcript-api==1.2.2",
    "zipp==3.23.0",
    "zstandard==0.25.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b45",
    "opentelemetry-instrumentation-system-metrics>=0.58b0",
    "locust>=2.43.3",
    "microsoft-agents-activity>=0.9.0",
    "microsoft-agents-hosting-core>=0.9.0",
    "microsoft-agents-hosting-fastapi>=0.9.0",
    "microsoft-agents-hosting-teams>=0.9.0",
    "microsoft-agents-authentication-msal>=0.9.0",
]


[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-docker~=3.1.1",
    "httpx",
]
lint = [
    "ruff",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.pytest.ini_options]
# pytest 8.x + pytest-asyncio 1.x. asyncio_mode=auto removes need for per-test @pytest.mark.asyncio.
asyncio_mode = "auto"

# Make `from open_webui...` and `from extension_modules...` resolve without manual PYTHONPATH.
pythonpath = ["backend", "backend/open_webui"]

# Default discovery roots. Add new test trees here.
testpaths = [
    "backend/open_webui/test",
    "backend/extension_modules/guardrail/tests",
    "backend/extension_modules/guide_agent/tests",
    "backend/extension_modules/dbsphere/tests",
    "backend/extension_modules/tools/google/tests",
    "backend/extension_modules/search_engine/tests",
    "backend/extension_modules/agent/tests",
]

# ``backend/extension_modules/tools/google`` 와 google-api-python-client 의 ``google``
# namespace package 가 충돌하지 않도록 importlib 모드 사용.
# importlib mode 는 ``__init__.py`` 기반 sys.path 조작 없이 path-based import.


# Standard discovery; explicit so router test files (test_*.py + Test* classes) keep working.
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers — declared so `--strict-markers` does not warn.
markers = [
    "integration: tests that require external services (Docker, Postgres, network). Excluded from default CI run.",
    "slow: long-running tests; excluded by default during local quick runs.",
]

# CI default: skip integration. Override locally with `pytest -m integration` or `pytest -m ""`.
# ``--import-mode=importlib`` 은 ``backend/extension_modules/tools/google`` 가
# google-api-python-client 의 ``google.*`` namespace 와 충돌하지 않게 한다.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "-m", "not integration",
]

# Silence known SQLAlchemy 2.0 deprecation noise from legacy migrations.
filterwarnings = [
    "ignore::DeprecationWarning:peewee",
    "ignore::sqlalchemy.exc.MovedIn20Warning",
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]

[tool.ruff]
exclude = [
    "(^|/)(.venv|venv|node_modules|__pycache__|.pytest_cache|.ruff_cache|migrations|static|templates|.git|.github|.langgraph_api|media)(/|$)",
    "^tests(/|$)",
    "^unit_tests(/|$)",
    ".env",
    ".env.example",
    ".gitignore",
    "LICENSE",
    "README.md",
    "langgraph.json",
    "uv.lock"
]
lint.select = [
    "E",
    "F",
    "I",
    "B",
]
lint.ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B905"]
